moved chart underneath word in focus and in first column

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section>
     <div class="column is-full is-primary">
       <div class="columns ">
-        <div class="column is-one-quarter is-primary">
+        <div class="column is-one-quarter">
           <article class="panel is-primary">
             <article class="message is-primary">
               <div class="message-header">
@@ -68,11 +68,10 @@
                 </ul>
               </div>
             </article>
-        </div>
-        <div class="column is-primary">
+          </article>
           <div class="card">
             <div class="card-content">
-              <div class="chart-container" style="position: relative; height:40vh; width:80vw">
+              <div class="chart-container">
                 <canvas id="myChart"></canvas>
               </div>
               <p class="subtitle">
@@ -80,9 +79,11 @@
               </p>
             </div>
             <footer class="card-footer">
+            </footer>
           </div>
+        </div>
+        <div class="column is-primary">
 
-          </footer>
 
           <div class="columns">
             <div class="column">
