Populate various fields

--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
               </div>
               <div class="content is-normal">
                 <h1 id="wordInFocus">Word in focus</h1>
-                <p id="definitionMain">This is where the definition of main word will be</p>
+                <div id="definitionMain">
+                  
+                </div>
                 <ul>
-                  <li id="mainPro">Pronunciation.</li>
-                  <li id="mainSyl">Syllable.</li>
-                  <li id="mainFreq">Frequency.</li>
+                  <li id="mainPro"></li>
+                  <li id="mainSyl"></li>
+                  <li id="mainFreq"></li>
                 </ul>
               </div>
             </article>
@@ -87,9 +89,9 @@
 
           <div class="columns">
             <div class="column">
-              <div class="box">
+              <div class="box" id="synonyms-container">
                 Synonyms <div class="content is-small">
-                  <h1 id="altSyn">This will be alternate word</h1>
+                  <h1 class="altSyn">This will be alternate word</h1>
                   <ul>
                     <li>Pronunciation</li>
                     <li>Syllable</li>
