--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
             <div class="column" id="synonym-column">
               Synonyms
+
             </div>
 
             <div class="column" id="rhymes-column">
@@ -104,12 +105,25 @@
             <div class="column" id="antonym-column">
               Antonyms
             </div>
+            
 
           </div>
         </div>
       </div>
     </div>
   </section>
+  <div id="modal-js-example" class="modal">
+    <div class="modal-background"></div>
+  
+    <div class="modal-content">
+      <div class="box">
+        <p id=modalContent> manage this by changing modalContent id</p>
+        <!-- Your content -->
+      </div>
+    </div>
+  
+    <button class="modal-close is-large" aria-label="close"></button>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
     crossorigin="anonymous"></script>
