--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
     <div class="modal-content">
       <div class="box">
         <p id=modalContent> manage this by changing modalContent id</p>
-        <!-- Your content -->
+        <p id="modalPro"></p>
+        <p id="modalSyl"></p>
+        <p id="modalFreq"></p>
       </div>
     </div>
   
