added boxes for search results

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <button class="delete" aria-label="delete"></button>
               </div>
               <div class="content is-normal">
-                <h1 id="wordInFocus">Word in focus</h1>
+                <h2 id="wordInFocus">Word in focus</h2>
                 <div id="definitionMain">
 
                 </div>
@@ -91,16 +91,15 @@
 
             <div class="column" id="synonym-column">
               Synonyms
-
             </div>
 
-            <div class="column" id="rhymes-column">
+            <div class="column" id="rhyme-column">
               Rhyming
             </div>
 
-            <div class="column" id="homophones-column">
+            <!-- <div class="column" id="homophone-column">
               Sound-a-like
-            </div>
+            </div> -->
 
             <div class="column" id="antonym-column">
               Antonyms
