updated event listener to work as a form submit + click, local storage for search history

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         Type to search
         <div class="control has-icons-left has-icons-right">
           <div class="container is-centered is-primary">
-            <div class="field has-addons">
+            <form class="field has-addons" id="submit-form">
               <div class="control is-expanded">
                 <input id="inputBox" class="input" type="text" placeholder="type to search">
               </div>
               <div class="control">
-                <a id="searchButton" class="button is-primary is-light">
+                <button id="searchButton" class="button is-primary is-light">
                   Search
-                </a>
+                </button>
               </div>
-            </div>
+            </form>
           </div>
           </svg>
         </div>
