--- a/index.html
+++ b/index.html
@@ -115,12 +115,21 @@
     <div class="modal-background"></div>
   
     <div class="modal-content">
-      <div class="box">
-        <p id=modalContent> manage this by changing modalContent id</p>
+      <div class="modal-card">
+        <header class="modal-card-head">
+          <p class="modal-card-title" id=modalContent> Modal title</p>
+          <button class="delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+    
         <p id="modalPro"></p>
         <p id="modalSyl"></p>
         <p id="modalFreq"></p>
-      </div>
+    
+      </section>
+      <footer class="modal-card-foot">
+
+      </footer>
     </div>
   
     <button class="modal-close is-large" aria-label="close"></button>
