definitions on modals, link on modals
cleaning up js file so that an error from a misspelled element no longer shows

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="modal-content">
       <div class="modal-card">
         <header class="modal-card-head">
-          <p class="modal-card-title" id=modalContent> Modal title</p>
+          <h1 class="modal-card-title" id=modalContent> Modal title</h1>
           <button class="delete" aria-label="close"></button>
         </header>
         <section class="modal-card-body">
@@ -125,6 +125,7 @@
         <p id="modalPro"></p>
         <p id="modalSyl"></p>
         <p id="modalFreq"></p>
+        <p id="modalDef"></p>
     
       </section>
       <footer class="modal-card-foot">
