--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
                   Search
                 </button>
               </div>
+              <div class="dropdown is-hoverable">
+                <div class="dropdown-trigger">
+                  <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+                    <span>Search History</span>
+                    <span class="icon is-small">
+                      <i class="fas fa-angle-down" aria-hidden="true"></i>
+                    </span>
+                  </button>
+                </div>
+                <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+                  <div class="dropdown-content">
+                    <div class="dropdown-item">
+                      <p>You can insert <strong>any type of content</strong> within the dropdown menu.</p>
+                    </div>
+
+                    
+                  </div>
+                </div>
+              </div>
             </form>
           </div>
           </svg>
