added hide results

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     </div>
   </section>
-  <section>
+  <section id="results-container" class="hidden">
     <div class="column is-full is-primary">
       <div class="columns ">
         <div class="column is-one-quarter">
