styled the search bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Word Search</title>
 </head>
 
-<body>
+<body id="body" class="on-load">
   <header>
     <nav class="navbar is-large" role="navigation" aria-label="main navigation">
       <div class="navbar-brand is-large">
@@ -22,7 +22,7 @@
       </div>
     </nav>
   </header>
-  <section>
+  <section id="search-form">
     <div>
       <div class="notification is-primary"> <svg style="width:24px;height:24px" viewBox="0 0 24 24">
           <path fill="currentColor"
