event listener for delete button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <article class="message is-primary">
               <div class="message-header">
                 <p id="mainWord">Word in focus</p>
-                <button class="delete" aria-label="delete"></button>
+                <button id="delete-button" class="delete" aria-label="delete"></button>
               </div>
               <div class="content is-normal p-3">
                 <h2 id="wordInFocus">Word in focus</h2>
