--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p id="mainWord">Word in focus</p>
                 <button id="delete-button" class="delete" aria-label="delete"></button>
               </div>
-              <div class="content is-normal p-3">
+              <div class="content is-normal p-3 scroll">
                 <h2 id="wordInFocus">Word in focus</h2>
                 <div id="definitionMain">
 
