--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     </nav>
   </header>
 
-  <section id="search-form">
+  <section id="search-form" class="search-form-before">
     <div>
-      <div class="notification is-primary"> <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+      <div class="notification is-primary">
+        <!-- <svg style="width:24px;height:24px" viewBox="0 0 24 24">
           <path fill="currentColor"
             d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-        </svg>
-        Type to search
+        </svg> -->
+        <!-- Type to search -->
         <div class="control has-icons-left has-icons-right">
           <div class="container is-centered is-primary">
             <form class="field has-addons" id="submit-form">
@@ -78,7 +79,7 @@
                 <button id="delete-button" class="delete" aria-label="delete"></button>
               </div>
               <div id="focus-container" class="content is-normal p-3 scroll">
-                <h2 id="wordInFocus">Word in focus</h2>
+                <!-- <h2 id="wordInFocus">Word in focus</h2> -->
                 <div id="definitionMain">
                 </div>
                 <ul>
@@ -111,7 +112,7 @@
     <div class="modal-content">
       <div class="modal-card">
         <header class="modal-card-head">
-          <h1 class="modal-card-title" id=modalContent> Modal title</h1>
+          <h1 class="modal-card-title tooltip" id=modalContent> Modal title<span class="tooltiptext"></span></h1>
           <button class="delete" aria-label="close"></button>
         </header>
 
