render all definitions in modal

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <p id="modalPro"></p>
           <p id="modalSyl"></p>
           <p id="modalFreq"></p>
-          <p id="modalDef"></p>
+          <div id="modalDefBox"></div>
         </section>
 
         <footer class="modal-card-foot">
