fixed the error of multiple events firing at once

--- a/index.html
+++ b/index.html
@@ -111,8 +111,11 @@
     <div class="modal-background"></div>
     <div class="modal-content">
       <div class="modal-card">
+        
         <header class="modal-card-head">
-          <h1 class="modal-card-title tooltip" id=modalContent> Modal title<span class="tooltiptext"></span></h1>
+          <h1 class="modal-card-title tooltip" id=modalContent> Modal title
+            <span class="tooltiptext"></span>
+          </h1>
           <button class="delete" aria-label="close"></button>
         </header>
 
