--- a/index.html
+++ b/index.html
@@ -22,100 +22,83 @@
     </nav>
   </header>
 
-  <section>
+  <section id="search-form" class="search-form-before">
     <div>
       <div class="notification is-primary">
+        <!-- <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path fill="currentColor"
+            d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+        </svg> -->
+        <!-- Type to search -->
         <div class="control has-icons-left has-icons-right">
-          <div id="search-area" class="container is-centered is-primary">
+          <div class="container is-centered is-primary">
             <form class="field has-addons" id="submit-form">
-
               <div class="control is-expanded">
-                <input id="input-box" class="input" type="text" placeholder="type to search">
+                <input id="inputBox" class="input" type="text" placeholder="type to search">
               </div>
-
               <div class="control">
-                <button id="search-button" class="button is-primary is-light">Search</button>
-              </div>
-
-            </form>
-
-            <div class="dropdown is-hoverable">
-
-              <div class="dropdown-trigger">
-                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
-                  <span>Search History</span>
-                  <span class="icon is-small">
-                    <i class="fas fa-angle-down" aria-hidden="true"></i>
-                  </span>
+                <button id="searchButton" class="button is-primary is-light">
+                  Search
                 </button>
               </div>
-
-              <div class="dropdown-menu dropdown-length1" id="dropdown-menu4" role="menu">
-                <div class="dropdown-content">
-                  <h4 class="dropdown-item">
-                  </h4>
+              <div class="dropdown is-hoverable">
+                <div class="dropdown-trigger">
+                  <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+                    <span>Search History</span>
+                    <span class="icon is-small">
+                      <i class="fas fa-angle-down" aria-hidden="true"></i>
+                    </span>
+                  </button>
+                </div>
+                <div class="dropdown-menu scroll2" id="dropdown-menu4" role="menu">
+                  <div class="dropdown-content">
+                    <div class="dropdown-item">
+                      <p>You can insert <strong>any type of content</strong> within the dropdown menu.</p>
+                    </div>
+                  </div>
                 </div>
               </div>
-
-            </div>
-
+            </form>
           </div>
+          </svg>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
   <section id="results-container" class="hidden">
     <div class="column is-full is-primary">
-      <div class="columns">
+      <div class="columns ">
 
         <div class="column is-one-half">
           <article class="panel is-primary">
             <article class="message is-primary">
-
               <div class="message-header">
-                <p id="main-word">Word in focus</p>
+                <p id="mainWord">Word in focus</p>
                 <button id="delete-button" class="delete" aria-label="delete"></button>
               </div>
-
-              <div id="focus-container" class="content is-normal p-3">
-
-                <div id="main-pronunciation">
-                  <p>
-                    <span class="main-title">Pronunciation:</span>
-                    <span class="tooltip-text">Click on hear the pronunciation.</span>
-                  </p>
-                  <div id="main-pronunciation-container">
-                  </div>
-
+              <div id="focus-container" class="content is-normal p-3 scroll">
+                <!-- <h2 id="wordInFocus">Word in focus</h2> -->
+                <div id="definitionMain">
                 </div>
-
-                <div id="definition-main">
-                  <p class='main-title'>Definition(s):</p>
-                  <div id="main-definitions-container"></div>
-                </div>
-
+                <ul>
+                  <li id="mainPro"></li>
+                  <li id="mainSyl"></li>
+                  <li id="mainFreq"></li>
+                </ul>
               </div>
-
             </article>
           </article>
         </div>
 
         <div class="column is-primary">
-          <div id="search-results" class="columns">
-
+          <div class="columns">
             <div class="column" id="synonym-column">
-              <div class="message-header" id="synonym-text">Synonyms</div>
-              <div id="synonym-container" class="box words-container"></div>
             </div>
-
             <div class="column" id="rhyme-column">
-              <div class="message-header" id="rhyme-text">Rhymes</div>
-              <div id="rhyme-container" class="box words-container"></div>
             </div>
             <div class="column" id="antonym-column">
-              <div class="message-header" id="antonym-text">Antonyms</div>
-              <div id="antonym-container" class="box words-container"></div>
             </div>
           </div>
         </div>
@@ -127,48 +110,30 @@
   <div id="modal-js-example" class="modal">
     <div class="modal-background"></div>
     <div class="modal-content">
-
       <div class="modal-card">
-
         <header class="modal-card-head">
-
-          <h1 class="modal-card-title tooltip">
-            <span id="modal-title-text">Modal Title</span>
-            <span class="tooltip-text">Click on the word to start a new search.</span>
-          </h1>
-          <button id="modal-close-1" class="modal-close" class="delete" aria-label="close"></button>
-        
+          <h1 class="modal-card-title tooltip" id=modalContent> Modal title<span class="tooltiptext"></span></h1>
+          <button class="delete" aria-label="close"></button>
         </header>
 
         <section class="modal-card-body">
-
-          <div id="modal-pronunciation">
-            <p>
-              <span class="modal-title">Pronunciation:</span>
-              <span class="tooltip-text">Click to hear the pronunciation.</span>
-            </p>
-            <div id="modal-pronunciation-container">
-            </div>
-          </div>
-
-          <div id="definition-modal">
-            <p class='modal-title'>Definition(s):</p>
-            <div id="modal-definitions-container"></div>
-          </div>
-
+          <p id="modalPro"></p>
+          <p id="modalSyl"></p>
+          <p id="modalFreq"></p>
+          <p id="modalDef"></p>
         </section>
 
-        <footer class="modal-card-foot"></footer>
-
+        <footer class="modal-card-foot">
+        </footer>
       </div>
-
-      <button id="modal-close-2" class="modal-close is-large" aria-label="close"></button>
+      <button class="modal-close is-large" aria-label="close"></button>
     </div>
-  </div>
 
-  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-    crossorigin="anonymous"></script>
-  <script src="./assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.js"
+      integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js"></script>
+  </div>
 </body>
 
 </html>
